Nov 12th 2000: Alex Burger <alex@fragit.net>
-Changed Copy+ menu to use double spaces instead of commas to separate
 fields.  Added 'of' for current players / max players. Eg: 5 of 10

Nov 5th 2000: Alex Burger <alex@fragit.net>
-Add call to clear list to end of function server_clist_build_filtered
 to prevent segfault on some computers due to server list that is emptied
 after a player filter is applied

Oct 27th 2000: xqf-0.9.4f2 - Alex Burger <alex@fragit.net>
-Added Copy+ menu option - copies the following server info to the clipboard:
 ping,ip:port,name,map,curplayers,maxplayers
-Now creates a LaunchInfo.txt in ~/.qf when launching a game for use with IRC 
 scripts etc.  Toggle on / off using Preferences / Appearance 

Oct 8th 2000: xqf-0.9.4f - Alex Burger <alex@fragit.net>
-UnrealTournament master support using Gamespy style master via QStat 2.4a
-Add Epic UT Master server to default master list
-Remove Gamespy master server entry from default master list
-Fixed master list bug

Oct 4th 2000: xqf-0.9.4e - Alex Burger <alex@fragit.net>
-Soldier of Fortune support
-Gamespy master server support when used with QStat 2.4a
-Format of 'lists' file changed to record game type in master entry
-Ability to add the same master to multiple games such as Gamespy's master

xqf-0.9.4d - Bill Adams <webmaster@evil.inetarena.com>
-When browsing Q3A games the mods (e.g. arena, osp, beryllium, etc.) show
 up in the "Game" column along with the game type (FFA, etc.). 
-The mod appears in its own column for Q3A games
-You can filter by mod
-You can filter by the version string

